--- a/Preproccesing.ipynb
+++ b/Preproccesing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -121,77 +121,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0CvZyqGK83qdAxAOV70YIiASXgbPqF2y.txt processsing 52.88035450516987\n",
-      "0KU7TdRKtkfn95WcXoUNIbO1yezJImvX.txt processsing 47.63513513513514\n",
-      "0lZh3ECMrJxRQh5OwATOb1zZB9wpDo06.txt processsing 53.57142857142857\n",
-      "0OPAeMErixbhjOn86FgsRiimaVMXaz6H.txt processsing 47.89473684210526\n",
-      "1dGIFt0ooHbVviopqyRwlmm1r9wmL6Vh.txt processsing 46.63865546218487\n",
-      "1i5echWDRemeDDOJ3zEUkxV6utc9cOCB.txt processsing 62.5\n",
-      "1MhpOzsIjbS5Dx0dKuLWgbM1sQlimtg8.txt processsing 42.76315789473684\n",
-      "1x6omVvrJssNdgDHvwXPqfHqlWWJF8aV.txt processsing 42.025862068965516\n",
-      "2EMMlzwAfTv37RwAQv0rHVJdzFLhhWPS.txt processsing 54.377880184331794\n",
-      "2FrS9SQX9mNIPcoJq7igCrAARR9PpvWe.txt processsing 46.835443037974684\n",
-      "3IeGXabA2snLF339czu9m2FPsUp0OnUf.txt processsing 46.0\n",
-      "3toCnxW6bb0ofCZ1Y1DgJvszyqSD5Ja6.txt processsing 53.84615384615385\n",
-      "4nCHet4c47P7UKgrRxuCrqi5k9PK4nH8.txt processsing 52.610837438423644\n",
-      "4wwU8TfILcAEtFsThhHBhPRGzVDOH2P1.txt processsing 49.171270718232044\n",
-      "5ld7XSeD7whQo15NbSglh1aU3By9VxAL.txt processsing 49.445865302642794\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "path = r'C:\\Users\\Darshan\\Music\\raman_kannan\\NLP\\preprocessing\\preprocessing_articles\\2017'\n",
+    "os.chdir(path)\n",
     "\n",
-    "os.chdir(r'C:\\Users\\Darshan\\Music\\raman_kannan\\NLP\\preprocessing\\preprocessing_articles')\n",
+    "for d in os.listdir('.'):\n",
+    "    os.chdir(path+f'\\\\{d}')\n",
+    "    print(f'Directory {d} is getting processed')\n",
+    "    for file in os.listdir('.'):\n",
+    "        if(file.find('.txt')):\n",
+    "            #Spilting the basename and extension\n",
+    "            file_n,file_ext = os.path.splitext(file)\n",
     "\n",
-    "for file in os.listdir('.'):\n",
-    "    if(file.find('.txt')):\n",
-    "        #Spilting the basename and extension\n",
-    "        file_n,file_ext = os.path.splitext(file)\n",
+    "            #Reading data from the file\n",
+    "            lst = open(file,'r',encoding='utf-8').readlines()\n",
+    "            if(len(lst[0]) == 0):\n",
+    "                continue\n",
+    "            texts = str(lst[0])\n",
     "\n",
-    "        #Reading data from the file\n",
-    "        lst = open(file,'r',encoding='utf-8').readlines()\n",
-    "        if(len(lst[0]) == 0):\n",
-    "            continue\n",
-    "        texts = str(lst[0])\n",
-    "        \n",
-    "        #print(texts)\n",
-    "        \n",
-    "        #Saving the number of words in original file to compare with preprocessed file words\n",
-    "        original_sent = word_tokenize(texts)\n",
+    "            #print(texts)\n",
     "\n",
-    "        #Cleaning the text\n",
-    "        clean_sent = preprocess_text(texts)\n",
-    "        #print('Cleaning words Done')\n",
-    "       \n",
-    "        \n",
-    "        #Removing stopwords\n",
-    "        clean_stop = remove_stopwords(clean_sent)\n",
-    "        #print('Cleaning stop words Done')\n",
-    "        \n",
-    "        #Lemmatizing the words\n",
-    "        clean_lemma = lemmatize_text(clean_stop)\n",
-    "        #print('Cleaning lemma words Done')\n",
-    "        \n",
-    "        #Giving the comparision in percentage of words reduced\n",
-    "        print(f'{file} processsing',(len(original_sent)-len(word_tokenize(clean_lemma)))/len(original_sent)*100)\n",
-    "        \n",
-    "        clean_file = preprocess_text(clean_lemma)\n",
-    "        \n",
-    "        #Writing it in a file\n",
-    "        fp = open(f'{file_n}_pp{file_ext}','w')\n",
-    "        fp.write(clean_file)\n",
-    "        fp.close()\n",
-    "        \n",
-    "        #Deleting original file\n",
-    "        \n",
-    "        os.remove(file)\n"
+    "            #Saving the number of words in original file to compare with preprocessed file words\n",
+    "            original_sent = word_tokenize(texts)\n",
+    "\n",
+    "            #Cleaning the text\n",
+    "            clean_sent = preprocess_text(texts)\n",
+    "            #print('Cleaning words Done')\n",
+    "\n",
+    "\n",
+    "            #Removing stopwords\n",
+    "            clean_stop = remove_stopwords(clean_sent)\n",
+    "            #print('Cleaning stop words Done')\n",
+    "\n",
+    "            #Lemmatizing the words\n",
+    "            clean_lemma = lemmatize_text(clean_stop)\n",
+    "            #print('Cleaning lemma words Done')\n",
+    "\n",
+    "            #Giving the comparision in percentage of words reduced\n",
+    "            #print(f'{file} processsing',(len(original_sent)-len(word_tokenize(clean_lemma)))/len(original_sent)*100)\n",
+    "\n",
+    "            clean_file = preprocess_text(clean_lemma)\n",
+    "\n",
+    "            #Writing it in a file\n",
+    "            fp = open(f'{file_n}_pp{file_ext}','w',encoding = 'utf-8')\n",
+    "            fp.write(clean_file)\n",
+    "            fp.close()\n",
+    "\n",
+    "            #Deleting original file\n",
+    "\n",
+    "            os.remove(file)\n",
+    "print('Request Completed')\n"
    ]
   },
   {
