Updated CNN_Extraction with more security measures

--- a/jupyter_notebook/CNN_Extractions_N_Years.ipynb
+++ b/jupyter_notebook/CNN_Extractions_N_Years.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -14,68 +14,229 @@
     "import json\n",
     "from newspaper import Article\n",
     "from newspaper import fulltext\n",
-    "import os "
+    "import os \n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.cnn.com/us/articles/sitemap-2011-07.html\n",
+      "200\n",
+      "Sleeping for 3 seconds done with Sitemap-2011-07.json\n",
+      "https://www.cnn.com/us/articles/sitemap-2011-08.html\n",
+      "200\n",
+      "Sleeping for 3 seconds done with Sitemap-2011-08.json\n",
+      "https://www.cnn.com/us/articles/sitemap-2011-09.html\n",
+      "200\n",
+      "Sleeping for 3 seconds done with Sitemap-2011-09.json\n",
+      "https://www.cnn.com/us/articles/sitemap-2011-10.html\n",
+      "200\n",
+      "Sleeping for 3 seconds done with Sitemap-2011-10.json\n",
+      "https://www.cnn.com/us/articles/sitemap-2011-11.html\n",
+      "200\n",
+      "Sleeping for 3 seconds done with Sitemap-2011-11.json\n",
+      "https://www.cnn.com/us/articles/sitemap-2011-12.html\n",
+      "200\n",
+      "Sleeping for 3 seconds done with Sitemap-2011-12.json\n",
+      "Request Completed\n"
+     ]
+    }
+   ],
    "source": [
     "def cnn():\n",
-    "    years = ['2017','2018','2019']\n",
+    "    \n",
+    "    #Changing the directory where to place the site_maps files\n",
+    "    os.chdir(r'C:\\Users\\Darshan\\Music\\raman_kannan\\NLP\\site_maps')\n",
+    "    \n",
+    "    #CNN has started using sitemaps from 2011 7th month so extracted from 2012 and explicitly done for 2011 done with this script\n",
+    "    \n",
+    "    years = ['2012','2013','2014','2015','2016','2017','2018','2019']\n",
     "    months = ['01','02','03','04','05','06','07','08','09','10','11','12']\n",
-    "    url = 'https://www.cnn.com/article/sitemap-'\n",
+    "    url_main = 'https://www.cnn.com/us/articles/sitemap-'\n",
     "    for y in years:\n",
     "        for m in months:\n",
-    "            url  = url + f'{y}-{m}.html'\n",
-    "            page = requests.get(url=url,verify=True)\n",
-    "            \n",
-    "            # Extracting things using Beautiful soup libraries\n",
-    "            #The given urls viewed in page source where embedded in class call 'sitemap-link'\n",
-    "            \n",
-    "            soup = BeautifulSoup(page.content, 'html.parser')\n",
-    "            links = soup.find_all('span',class_ ='sitemap-link')\n",
-    "            urls = {'url':[],'title':[]}\n",
-    "            count = 1 #Ignoring the first link as it does not contains 'a' tag\n",
-    "            for link in links:\n",
+    "            url  = url_main + f'{y}-{m}.html'\n",
+    "            print(url)\n",
+    "            try:\n",
+    "                page = requests.get(url=url,verify=True)\n",
     "                \n",
-    "                lk = link.find('a',href=True)\n",
-    "                if(count==1):\n",
-    "                    count+=1\n",
-    "                    continue  \n",
-    "                url_ = lk['href']\n",
-    "                text = lk.get_text()\n",
-    "                urls['url'].append(url_)\n",
-    "                urls['title'].append(text)\n",
-    "            \n",
-    "            #Storing in json frame\n",
-    "            df = pd.DataFrame(urls)\n",
-    "            df.to_json(f'Sitemap-{y}-{m}'.json\")\n",
-    "            #print(\"Request completed\")\n",
-    "#cnn()"
+    "                #Checking the status of the requested page 200 means All ok\n",
+    "                if(page.status_code == 200):\n",
+    "\n",
+    "                    # Extracting atricle links using Beautiful soup library\n",
+    "                    #The given urls viewed in page source where embedded in class call 'sitemap-link'\n",
+    "\n",
+    "                    soup = BeautifulSoup(page.content, 'html.parser')\n",
+    "                    links = soup.find_all(class_ = 'sitemap-link')\n",
+    "                    \n",
+    "\n",
+    "                    urls = {'url':[],'title':[]}\n",
+    "                    count = 1  #Ignoring the first link as it does not contains 'a' tag\n",
+    "                    for link in links:\n",
+    "\n",
+    "                        lk = link.find('a',href=True)\n",
+    "                        if(count==1):\n",
+    "                            count+=1\n",
+    "                            continue  \n",
+    "                            \n",
+    "                        url_ = lk['href']\n",
+    "                        text = lk.get_text()\n",
+    "                        urls['url'].append(url_)\n",
+    "                        urls['title'].append(text)\n",
+    "\n",
+    "                    #Storing in json frame\n",
+    "                    df = pd.DataFrame(urls)\n",
+    "                    df.to_json(f'Sitemap-{y}-{m}.json')\n",
+    "                    \n",
+    "                    #Sleeping for 2 seconds to avoid overloading the server with the requests\n",
+    "                    time.sleep(2)\n",
+    "                    \n",
+    "                except Exceptions as e:\n",
+    "                    print(str(e))\n",
+    "cnn()\n",
+    "print('Request Completed')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sitemap-2011-07.json\n",
+      "Sitemap-2011-08.json\n",
+      "Sitemap-2011-09.json\n",
+      "Sitemap-2011-10.json\n",
+      "Sitemap-2011-11.json\n",
+      "Sitemap-2011-12.json\n",
+      "Sitemap-2012-01.json\n",
+      "Sitemap-2012-02.json\n",
+      "Sitemap-2012-03.json\n",
+      "Sitemap-2012-04.json\n",
+      "Sitemap-2012-05.json\n",
+      "Sitemap-2012-06.json\n",
+      "Sitemap-2012-07.json\n",
+      "Sitemap-2012-08.json\n",
+      "Sitemap-2012-09.json\n",
+      "Sitemap-2012-10.json\n",
+      "Sitemap-2012-11.json\n",
+      "Sitemap-2012-12.json\n",
+      "Sitemap-2013-01.json\n",
+      "Sitemap-2013-02.json\n",
+      "Sitemap-2013-03.json\n",
+      "Sitemap-2013-04.json\n",
+      "Sitemap-2013-05.json\n",
+      "Sitemap-2013-06.json\n",
+      "Sitemap-2013-07.json\n",
+      "Sitemap-2013-08.json\n",
+      "Sitemap-2013-09.json\n",
+      "Sitemap-2013-10.json\n",
+      "Sitemap-2013-11.json\n",
+      "Sitemap-2013-12.json\n",
+      "Sitemap-2014-01.json\n",
+      "Sitemap-2014-02.json\n",
+      "Sitemap-2014-03.json\n",
+      "Sitemap-2014-04.json\n",
+      "Sitemap-2014-05.json\n",
+      "Sitemap-2014-06.json\n",
+      "Sitemap-2014-07.json\n",
+      "Sitemap-2014-08.json\n",
+      "Sitemap-2014-09.json\n",
+      "Sitemap-2014-10.json\n",
+      "Sitemap-2014-11.json\n",
+      "Sitemap-2014-12.json\n",
+      "Sitemap-2015-01.json\n",
+      "Sitemap-2015-02.json\n",
+      "Sitemap-2015-03.json\n",
+      "Sitemap-2015-04.json\n",
+      "Sitemap-2015-05.json\n",
+      "Sitemap-2015-06.json\n",
+      "Sitemap-2015-07.json\n",
+      "Sitemap-2015-08.json\n",
+      "Sitemap-2015-09.json\n",
+      "Sitemap-2015-10.json\n",
+      "Sitemap-2015-11.json\n",
+      "Sitemap-2015-12.json\n",
+      "Sitemap-2016-01.json\n",
+      "Sitemap-2016-02.json\n",
+      "Sitemap-2016-03.json\n",
+      "Sitemap-2016-04.json\n",
+      "Sitemap-2016-05.json\n",
+      "Sitemap-2016-06.json\n",
+      "Sitemap-2016-07.json\n",
+      "Sitemap-2016-08.json\n",
+      "Sitemap-2016-09.json\n",
+      "Sitemap-2016-10.json\n",
+      "Sitemap-2016-11.json\n",
+      "Sitemap-2016-12.json\n",
+      "Sitemap-2017-01.json\n",
+      "Sitemap-2017-02.json\n",
+      "Sitemap-2017-03.json\n",
+      "Sitemap-2017-04.json\n",
+      "Sitemap-2017-05.json\n",
+      "Sitemap-2017-06.json\n",
+      "Sitemap-2017-07.json\n",
+      "Sitemap-2017-08.json\n",
+      "Sitemap-2017-09.json\n",
+      "Sitemap-2017-10.json\n",
+      "Sitemap-2017-11.json\n",
+      "Sitemap-2017-12.json\n",
+      "Sitemap-2018-01.json\n",
+      "Sitemap-2018-02.json\n",
+      "Sitemap-2018-03.json\n",
+      "Sitemap-2018-04.json\n",
+      "Sitemap-2018-05.json\n",
+      "Sitemap-2018-06.json\n",
+      "Sitemap-2018-07.json\n",
+      "Sitemap-2018-08.json\n",
+      "Sitemap-2018-09.json\n",
+      "Sitemap-2018-10.json\n",
+      "Sitemap-2018-11.json\n",
+      "Sitemap-2018-12.json\n",
+      "Sitemap-2019-01.json\n",
+      "Sitemap-2019-02.json\n",
+      "Sitemap-2019-03.json\n",
+      "Sitemap-2019-04.json\n",
+      "Sitemap-2019-05.json\n",
+      "Sitemap-2019-06.json\n",
+      "Sitemap-2019-07.json\n",
+      "Sitemap-2019-08.json\n",
+      "Sitemap-2019-09.json\n",
+      "Sitemap-2019-10.json\n",
+      "Sitemap-2019-11.json\n",
+      "Sitemap-2019-12.json\n",
+      "Request Completed\n"
+     ]
+    }
+   ],
    "source": [
     "#Cleaning sitemap files with containing duplicate articles\n",
     "\n",
-    "for file_name in links:\n",
-    "    file_n,file_ext = os.path.splitext(file_name)\n",
-    "    df = pd.read_json(file_name)\n",
-    "    df.reset_index(drop=True,inplace=True)\n",
-    "    df.drop_duplicates(subset='title',keep='first',inplace=True)\n",
-    "    df.to_json(f'{file_n}_processed.{file_ext}')\n",
+    "def cleaningSiteMaps():\n",
+    "    \n",
+    "    os.chdir(r'C:\\Users\\Darshan\\Music\\raman_kannan\\NLP\\site_maps_copy')\n",
+    "    \n",
+    "    for file_name in os.listdir('.'):\n",
+    "        file_n,file_ext = os.path.splitext(file_name)\n",
+    "        df = pd.read_json(file_name)\n",
+    "        df.reset_index(drop=True,inplace=True)\n",
+    "        df.drop_duplicates(subset='title',keep='first',inplace=True)\n",
+    "        df.to_json(f'{file_n}-pp{file_ext}')\n",
+    "        os.remove(file_name)\n",
     "\n",
+    "cleaningSiteMaps()\n",
     "print('Request Completed')\n",
     "    \n",
     "\n",
