Jupyter Notebook Codes Available

--- a/Code/jupyter_notebook/Guardian_Extractions.ipynb
+++ b/Code/jupyter_notebook/Guardian_Extractions.ipynb
@@ -1433,7 +1433,7 @@
     "    \n",
     "    #CNN has started using sitemaps from 2011 7th month so extracted from 2012 and explicitly done for 2011 done with this script\n",
     "    \n",
-    "    years = ['2008','2009','2010','2011']\n",
+    "    years = ['2010']\n",
     "    months = {'jan':'01','feb':'02','mar':'03','apr':'04','may':'05','jun':'06','jul':'07','aug':'08','sep':'09','oct':'10','nov':'11','dec':'12'}\n",
     "    days = ['01','02','03','04','05','06','07','08','09','10','11','12','13','14','15','16','17','18','19','20','21','22','23','24','25','26','27','28']\n",
     "    url_main = 'https://www.theguardian.com/us-news/'\n",
