--- a/Code/jupyter_notebook/Merging_DataFrames.ipynb
+++ b/Code/jupyter_notebook/Merging_DataFrames.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -11,7 +11,8 @@
     "import pandas as pd\n",
     "import json\n",
     "import os\n",
-    "import warnings\n"
+    "import warnings\n",
+    "import datetime\n"
    ]
   },
   {
@@ -43878,6 +43879,57 @@
     "print(neg/len(df)*100)\n",
     "print(pos/len(df)*100)\n",
     "print(nan/len(df)*100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Empty DataFrame\n",
+      "Columns: [Source, Date, Title, Url, File_name]\n",
+      "Index: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "os.chdir(r'C:\\Users\\Darshan\\Music\\raman_kannan\\NLP\\G_sitemaps')\n",
+    "df = pd.read_csv('Complete_Articles_Data_Guardian.csv',names = ['Source','Date','Title','Url','File_name'],sep='|',encoding = 'utf-8')\n",
+    "\n",
+    "df['Date'] = pd.to_datetime(df['Date'])\n",
+    "#print(df['Date'])\n",
+    "#print(type(df['Date'][0]))\n",
+    "df1_ =df[(df['Date']>datetime.date(2009,12,31)) & (df['Date']<datetime.date(2012,1,1))]  \n",
+    "df1_.to_csv('2010_2011.csv',encoding='utf-8',sep='|',header = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "790\n"
+     ]
+    }
+   ],
+   "source": [
+    "os.chdir(r'C:\\Users\\Darshan\\Desktop\\IBM_cp\\News_Articles_Sentiment_Analysis-master\\Data\\DataFrameFile_70k')\n",
+    "df = pd.read_csv('Complete_Articles_Data.csv',names = ['Source','Date','Title','Url','File_name'],sep='|',encoding = 'utf-8')\n",
+    "\n",
+    "df['Date'] = pd.to_datetime(df['Date'])\n",
+    "#print(df['Date'])\n",
+    "#print(type(df['Date'][0]))\n",
+    "df1_ =df[(df['Date']>datetime.date(2019,3,31)) & (df['Date']<datetime.date(2019,5,1))]  \n",
+    "print(len(df1_))\n",
+    "#df1_.to_csv('2010_2011.csv',encoding='utf-8',sep='|',header = True)"
    ]
   },
   {
