--- a/Code/jupyter_notebook/Preproccesing.ipynb
+++ b/Code/jupyter_notebook/Preproccesing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -121,58 +121,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Darshan\\Music\\raman_kannan\\NLP\\Gmaps\\2010\n",
+      "Directory 2010 is getting processed\n",
+      "C:\\Users\\Darshan\\Music\\raman_kannan\\NLP\\Gmaps\\2011\n",
+      "Directory 2011 is getting processed\n",
+      "Request Completed\n"
+     ]
+    }
+   ],
    "source": [
-    "path = r'C:\\Users\\Darshan\\Music\\raman_kannan\\NLP\\preprocessing\\preprocessing_articles\\2017'\n",
+    "path = r'C:\\Users\\Darshan\\Music\\raman_kannan\\NLP\\Gmaps'\n",
     "os.chdir(path)\n",
     "\n",
     "for d in os.listdir('.'):\n",
-    "    os.chdir(path+f'\\\\{d}')\n",
+    "    dir_path = path+f'\\\\{d}'\n",
+    "    print(dir_path)\n",
+    "    os.chdir(dir_path)\n",
+    "    \n",
     "    print(f'Directory {d} is getting processed')\n",
-    "    for file in os.listdir('.'):\n",
-    "        if(file.find('.txt')):\n",
-    "            #Spilting the basename and extension\n",
-    "            file_n,file_ext = os.path.splitext(file)\n",
+    "    \n",
+    "    for sub_dir in os.listdir('.'):\n",
+    "        os.chdir(dir_path + f'\\\\{sub_dir}')\n",
+    "        #sprint(f'Changing to Subdirectory {sub_dir}')\n",
+    "        for file in os.listdir('.'):\n",
+    "            if(file.find('.txt')):\n",
+    "                #Spilting the basename and extension\n",
+    "                file_n,file_ext = os.path.splitext(file)\n",
     "\n",
-    "            #Reading data from the file\n",
-    "            lst = open(file,'r',encoding='utf-8').readlines()\n",
-    "            if(len(lst[0]) == 0):\n",
-    "                continue\n",
-    "            texts = str(lst[0])\n",
+    "                #Reading data from the file\n",
+    "                try:\n",
+    "                    lst = open(file,'r',encoding='utf-8').readlines()\n",
+    "                    if(len(lst) == 0):\n",
+    "                        continue\n",
+    "                except Execptions as e:\n",
+    "                    print('Problem occured',str(e))\n",
+    "                    continue\n",
+    "                    \n",
+    "                texts = str(lst[0])\n",
     "\n",
-    "            #print(texts)\n",
+    "                #print(texts)\n",
     "\n",
-    "            #Saving the number of words in original file to compare with preprocessed file words\n",
-    "            original_sent = word_tokenize(texts)\n",
+    "                #Saving the number of words in original file to compare with preprocessed file words\n",
+    "                original_sent = word_tokenize(texts)\n",
     "\n",
-    "            #Cleaning the text\n",
-    "            clean_sent = preprocess_text(texts)\n",
-    "            #print('Cleaning words Done')\n",
+    "                #Cleaning the text\n",
+    "                clean_sent = preprocess_text(texts)\n",
+    "                #print('Cleaning words Done')\n",
     "\n",
     "\n",
-    "            #Removing stopwords\n",
-    "            clean_stop = remove_stopwords(clean_sent)\n",
-    "            #print('Cleaning stop words Done')\n",
+    "                #Removing stopwords\n",
+    "                clean_stop = remove_stopwords(clean_sent)\n",
+    "                #print('Cleaning stop words Done')\n",
     "\n",
-    "            #Lemmatizing the words\n",
-    "            clean_lemma = lemmatize_text(clean_stop)\n",
-    "            #print('Cleaning lemma words Done')\n",
+    "                #Lemmatizing the words\n",
+    "                clean_lemma = lemmatize_text(clean_stop)\n",
+    "                #print('Cleaning lemma words Done')\n",
     "\n",
-    "            #Giving the comparision in percentage of words reduced\n",
-    "            #print(f'{file} processsing',(len(original_sent)-len(word_tokenize(clean_lemma)))/len(original_sent)*100)\n",
+    "                #Giving the comparision in percentage of words reduced\n",
+    "                #print(f'{file} processsing',(len(original_sent)-len(word_tokenize(clean_lemma)))/len(original_sent)*100)\n",
     "\n",
-    "            clean_file = preprocess_text(clean_lemma)\n",
+    "                clean_file = preprocess_text(clean_lemma)\n",
     "\n",
-    "            #Writing it in a file\n",
-    "            fp = open(f'{file_n}_pp{file_ext}','w',encoding = 'utf-8')\n",
-    "            fp.write(clean_file)\n",
-    "            fp.close()\n",
+    "                #Writing it in a file\n",
+    "                fp = open(f'{file_n}_pp{file_ext}','w',encoding = 'utf-8')\n",
+    "                fp.write(clean_file)\n",
+    "                fp.close()\n",
     "\n",
-    "            #Deleting original file\n",
+    "                #Deleting original file\n",
     "\n",
-    "            os.remove(file)\n",
+    "                os.remove(file)\n",
     "print('Request Completed')\n"
    ]
   },
